# fast-apiAuth

./: DevelopmentRoadmap.md  ProductRequirementsDoc.md  README.md  directoryStructure.md
auth-service/: pyproject.toml
auth-service/src/auth_service/: main.py
auth-service/src/auth_service/config/: settings.py
