[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[project]
name="auth-service"
version="0.1.0"
description="Professional authentication microservice built with FastAPI"
authors=[
    {name="Cain", email="arcainearchitect@gmail.com"},
    {name="Pompeo"}
]
readme="README.md"
license={text="MIT"}
requires-python=">=3.11"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies=[
    # Core FasAPI dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.23"
    "alembic>=1.12.1",
    "aiosqlite>=0.19.0",    # SQLite async support
    "asyncpg>=0.29.0",      # PostgreSQLL async support

    # Security
    "passlib[bcrypt]>=1.7.4",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",

    # Validation and serialization
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "rich>=13.7.0",   
]

[project.optional-dependencies]
dev=[
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",
    "factory-boy>=3.3.0",

    # Code quality
    "ruff>=0.1.6",
    "black>=23.11.0",
    "mypy>=1.7.1",
    "pre-commit>3.5.0",

    # Development tools
    "ipython>=8.17.2",
    "ipdb>=0.13.13",
]

prod=[
    "gunicorn>=21.2.0",
    "prometheus-client>=0.19.0",
]

[project.urls]
# Homepage="https://github.com/arcainearchitect/fastapi-Auth"
# Repository="https://github.com/arcainearchitect/fastapi-Auth.git"
# Issues="https://github.com/arcainearchitect/fastapi-Auth/issues"

[project.scripts]
auth-service="auth_service.main:main"

[tool.hatch.build.targets.sdists]
include=[
    "/src",
    "/tests",
    "/migrations",
]

[tool.hatch.build.targets.wheel]
packages=["src/auth_service"]

# Ruff configuration
[tool.ruff]
target-version="py311"
line-length=88
select=[
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensive
    "UP",   # pyupgrade
    "ARG",  # flake8-unused arguments
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore=[
    "E501",     # line too long, handled by black
    "B008",     # do not perform function calls in argument defaults
    "B006",     # do not use mutable data structures for argument defaults
]
unfixable=["B"]

[tool.ruff.per-file-ignores]
"tests/**/*"=["ARG", "S"]
"migrations/**/*"=["ARG"]

[tool.black]
target-version=["py311"]
line-length=88
skip-string-normalization=true

[tool.mypy]
python-version="3.1.1"
check_untyped_defs=true
disallow_any_generics=true
disallow_untyped=true
follow_imports="silent"
strict_optional=true
warn_redundant_casts=true
warn_unused_ignores=true
disallow_any_unimported=true
no_implicit_optional=true
warn_return_any=true

[[tool.mypy.overrides]]
module="tests.*"
disallow_untyped_defs=false

[tool.pytest.ini_options]
minversion="6.0",
addopts="-ra -q --strict-markers --strict-config"
testpaths=["tests"]
pythonpath=["src"]
asyncio_mode="auto"

[tool.coverage.run]
source=["src"]
branch=true

[tool.coverage.report]
exclude_lines=[
    "pragmas: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__==.__main__.:",
    "class (.*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]